fix(workspace): retain selected-repository conflict choices and recover provisioning without reseeding